--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "yajra/laravel-datatables-oracle": "10.11"
     },
     "require-dev": {
+        "beyondcode/laravel-er-diagram-generator": "^4.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
