--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-      "framework": null,
+    "framework": null,
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.7.4" }
     },
@@ -8,20 +8,70 @@
         "src": "/(.*)",
         "dest": "/api/index.php"
     }],
+    "buildCommand": "composer install --no-dev --optimize-autoloader",
+    "excludeFiles": [
+        "tests/**",
+        "storage/logs/**",
+        "vendor/**/tests/**",
+        "vendor/**/docs/**",
+        "vendor/**/examples/**",
+        "vendor/**/CHANGELOG.md",
+        "vendor/**/README.md",
+        "vendor/**/composer.json",
+        "vendor/**/phpunit.xml*",
+        "vendor/**/psalm.xml*",
+        "vendor/**/phpstan.neon*"
+    ],
     "env": {
+        "APP_NAME": "Laravel",
         "APP_ENV": "production",
-        "APP_DEBUG": "true",
+        "APP_KEY": "base64:tDOEMPYe1c/neMkhiZlNWy++xL6c+rjWyLHaEkR14Wk=",
+        "APP_DEBUG": "false",
         "APP_URL": "https://yourproductionurl.com",
- 
-        "APP_CONFIG_CACHE": "/tmp/config.php",
-        "APP_EVENTS_CACHE": "/tmp/events.php",
-        "APP_PACKAGES_CACHE": "/tmp/packages.php",
-        "APP_ROUTES_CACHE": "/tmp/routes.php",
-        "APP_SERVICES_CACHE": "/tmp/services.php",
-        "VIEW_COMPILED_PATH": "/tmp",
- 
-        "CACHE_DRIVER": "array",
-        "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie"
+        "LOG_CHANNEL": "stack",
+        "LOG_DEPRECATIONS_CHANNEL": "null",
+        "LOG_LEVEL": "debug",
+        "DB_CONNECTION": "mysql",
+        "DB_HOST": "127.0.0.1",
+        "DB_PORT": "3306",
+        "DB_DATABASE": "crm_oyithok",
+        "DB_USERNAME": "root",
+        "DB_PASSWORD": "",
+        "BROADCAST_DRIVER": "log",
+        "CACHE_DRIVER": "file",
+        "FILESYSTEM_DISK": "local",
+        "QUEUE_CONNECTION": "sync",
+        "SESSION_DRIVER": "file",
+        "SESSION_LIFETIME": "120",
+        "MEMCACHED_HOST": "127.0.0.1",
+        "REDIS_HOST": "127.0.0.1",
+        "REDIS_PASSWORD": "null",
+        "REDIS_PORT": "6379",
+        "MAIL_MAILER": "smtp",
+        "MAIL_HOST": "mailpit",
+        "MAIL_PORT": "1025",
+        "MAIL_USERNAME": "null",
+        "MAIL_PASSWORD": "null",
+        "MAIL_ENCRYPTION": "null",
+        "MAIL_FROM_ADDRESS": "hello@example.com",
+        "MAIL_FROM_NAME": "${APP_NAME}",
+        "AWS_ACCESS_KEY_ID": "",
+        "AWS_SECRET_ACCESS_KEY": "",
+        "AWS_DEFAULT_REGION": "us-east-1",
+        "AWS_BUCKET": "",
+        "AWS_USE_PATH_STYLE_ENDPOINT": "false",
+        "PUSHER_APP_ID": "",
+        "PUSHER_APP_KEY": "",
+        "PUSHER_APP_SECRET": "",
+        "PUSHER_HOST": "",
+        "PUSHER_PORT": "443",
+        "PUSHER_SCHEME": "https",
+        "PUSHER_APP_CLUSTER": "mt1",
+        "VITE_APP_NAME": "${APP_NAME}",
+        "VITE_PUSHER_APP_KEY": "${PUSHER_APP_KEY}",
+        "VITE_PUSHER_HOST": "${PUSHER_HOST}",
+        "VITE_PUSHER_PORT": "${PUSHER_PORT}",
+        "VITE_PUSHER_SCHEME": "${PUSHER_SCHEME}",
+        "VITE_PUSHER_APP_CLUSTER": "${PUSHER_APP_CLUSTER}"
     }
 }
