--- a/.vercelignore
+++ b/.vercelignore
@@ -1,9 +1,11 @@
 # ========================================
-# 🧱 NODE MODULES / CACHE
+# 🧠 GIT / DEVELOPMENT FILES
 # ========================================
-node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+.git
+.gitignore
+.idea/
+.vscode/
+tests/
+docs/
 
 /vendor
