--- a/.vercelignore
+++ b/.vercelignore
@@ -1,6 +1,7 @@
 # ========================================
 # 🧠 GIT / DEVELOPMENT FILES
 # ========================================
+.git
 .idea/
 .vscode/
 tests/
