--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "true",
-    "APP_URL": "",
+    "APP_URL": "https://crm-oyithok.vercel.app",
     "APP_KEY": "base64:o0ZuokXK7FBGW1shJbreB5pR+CMPTx1g+6WnxUNy77E=",
 
     "DB_CONNECTION": "mysql",
