--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,9 @@
     "api/index.php": { "runtime": "vercel-php@0.7.4" }
   },
   "routes": [
+    { "src": "/adminlte/(.*)", "dest": "/public/adminlte/$1" },
+    { "src": "/images/(.*)", "dest": "/public/images/$1" },
+    { "src": "/build/(.*)", "dest": "/public/build/$1" },
     { "src": "/(.*)", "dest": "/api/index.php" }
   ],
   "env": {
